--- a/src/referee/Makefile
+++ b/src/referee/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-c -Wall
-LDFLAGS=-pthread -Wall -Wextra
+LDFLAGS=-pthread -Wall -Wextra -g
 SOURCES=main.c commands.c functions.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=../../build/referee
